src/tests/functionality/assignment_5_functions_headers/valid/14_mandatory_nested_function_scopes_with_blocks.c
int f(int x) {
    int result = x;
    if (x > 0) {
        int result = x + 10;
        result = result + 1;
    }
    return result;
}

int main() {
    return f(3);
}
