src/tests/functionality/assignment_5_functions_headers/invalid_semantic/18_mandatory_non_void_not_all_paths_return_optional_check.c
int f(int x) {
    if (x > 0) {
        return 1;
    }
}

int main() {
    return f(1);
}
